# proyecto_pfg

opc-ua.cpp/src/examples/: example_client.cpp  example_server.cpp
paho.mqtt.cpp/MI_PROGAMA/: DOCU.md
paho.mqtt.cpp/MI_PROGAMA/INTENTOS/: CMakeLists.txt  mqttpp_chat.cpp  topic_publish.cpp
paho.mqtt.cpp/src/: CMakeLists.txt
